--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ SET ( DEFAULT_AMLOGIC    OFF )
 SET ( DEFAULT_DISPMANX   OFF )
 SET ( DEFAULT_OSX        OFF )
 SET ( DEFAULT_X11        OFF )
+SET ( DEFAULT_XCB        OFF )
 SET ( DEFAULT_QT         ON )
 SET ( DEFAULT_WS281XPWM  OFF )
 SET ( DEFAULT_AVAHI      ON  )
@@ -121,6 +122,7 @@ elseif ( "${PLATFORM}" STREQUAL "amlogic64" )
 	SET ( DEFAULT_AMLOGIC    ON )
 elseif ( "${PLATFORM}" MATCHES "x11" )
 	SET ( DEFAULT_X11        ON )
+	SET ( DEFAULT_XCB        ON )
 	if ( "${PLATFORM}" STREQUAL "x11-dev" )
 		SET ( DEFAULT_AMLOGIC    ON)
 		SET ( DEFAULT_WS281XPWM  ON )
@@ -180,6 +182,9 @@ message(STATUS "ENABLE_CEC = ${ENABLE_CEC}")
 
 option(ENABLE_X11 "Enable the X11 grabber" ${DEFAULT_X11})
 message(STATUS "ENABLE_X11 = ${ENABLE_X11}")
+
+option(ENABLE_XCB "Enable the XCB grabber" ${DEFAULT_XCB})
+message(STATUS "ENABLE_XCB = ${ENABLE_XCB}")
 
 option(ENABLE_QT "Enable the qt grabber" ${DEFAULT_QT})
 message(STATUS "ENABLE_QT = ${ENABLE_QT}")
