--- a/libsrc/grabber/CMakeLists.txt
+++ b/libsrc/grabber/CMakeLists.txt
@@ -22,6 +22,10 @@ if (ENABLE_X11)
 	add_subdirectory(x11)
 endif()
 
+if (ENABLE_XCB)
+	add_subdirectory(xcb)
+endif()
+
 if (ENABLE_QT)
 	add_subdirectory(qt)
 endif()
