--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,6 +14,10 @@ if(ENABLE_X11)
 	add_subdirectory(hyperion-x11)
 endif()
 
+if(ENABLE_XCB)
+	add_subdirectory(hyperion-xcb)
+endif()
+
 if(ENABLE_DISPMANX)
 	add_subdirectory(hyperion-dispmanx)
 endif()
