--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,18 +36,19 @@ else()
 endif()
 
 # Set build variables
-SET ( DEFAULT_AMLOGIC    OFF )
-SET ( DEFAULT_DISPMANX   OFF )
-SET ( DEFAULT_OSX        OFF )
-SET ( DEFAULT_X11        OFF )
-SET ( DEFAULT_QT         ON )
-SET ( DEFAULT_WS281XPWM  OFF )
-SET ( DEFAULT_AVAHI      ON  )
-SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  ON )
+SET ( DEFAULT_AMLOGIC                     OFF )
+SET ( DEFAULT_DISPMANX                    OFF )
+SET ( DEFAULT_OSX                         OFF )
+SET ( DEFAULT_X11                         OFF )
+SET ( DEFAULT_QT                          ON  )
+SET ( DEFAULT_WS281XPWM                   OFF )
+SET ( DEFAULT_AVAHI                       ON  )
+SET ( DEFAULT_USE_SHARED_AVAHI_LIBS       ON  )
 SET ( DEFAULT_USE_SYSTEM_FLATBUFFERS_LIBS OFF )
-SET ( DEFAULT_USE_SYSTEM_PROTO_LIBS OFF )
-SET ( DEFAULT_USE_SYSTEM_MBEDTLS_LIBS OFF )
-SET ( DEFAULT_TESTS      OFF )
+SET ( DEFAULT_USE_SYSTEM_PROTO_LIBS       OFF )
+SET ( DEFAULT_USE_SYSTEM_MBEDTLS_LIBS     OFF )
+SET ( DEFAULT_TESTS                       OFF )
+SET ( DEFAULT_EXPERIMENTAL                OFF )
 
 IF ( ${CMAKE_SYSTEM} MATCHES "Linux" )
 	SET ( DEFAULT_V4L2        ON )
@@ -189,6 +190,9 @@ message(STATUS "ENABLE_TESTS = ${ENABLE_TESTS}")
 
 option(ENABLE_PROFILER "enable profiler capabilities - not for release code" OFF)
 message(STATUS "ENABLE_PROFILER = ${ENABLE_PROFILER}")
+
+option(ENABLE_EXPERIMENTAL "Compile experimental features" ${DEFAULT_EXPERIMENTAL})
+message(STATUS "ENABLE_EXPERIMENTAL = ${ENABLE_EXPERIMENTAL}")
 
 SET ( FLATBUFFERS_INSTALL_BIN_DIR ${CMAKE_BINARY_DIR}/flatbuf )
 SET ( FLATBUFFERS_INSTALL_LIB_DIR ${CMAKE_BINARY_DIR}/flatbuf )
