--- a/HyperionConfig.h.in
+++ b/HyperionConfig.h.in
@@ -42,6 +42,9 @@
 // Define to enable profiler for development purpose
 #cmakedefine ENABLE_PROFILER
 
+// Define to enable experimental features
+#cmakedefine ENABLE_EXPERIMENTAL
+
 // the hyperion build id string
 #define HYPERION_BUILD_ID "${HYPERION_BUILD_ID}"
 #define HYPERION_GIT_REMOTE "${HYPERION_GIT_REMOTE}"
