Feature/xcb grabber (#912)
* Add Xcb grabber

* update compile instruction

Signed-off-by: Paulchen Panther <Paulchen-Panter@protonmail.com>

* Fix problem on resolution change + Make XCB default if X11 is not avaialable

* Fix decimation problem

Co-authored-by: Paulchen Panther <16664240+Paulchen-Panther@users.noreply.github.com>
Co-authored-by: Paulchen Panther <Paulchen-Panter@protonmail.com>

--- a/src/hyperiond/CMakeLists.txt
+++ b/src/hyperiond/CMakeLists.txt
@@ -95,6 +95,10 @@ if (ENABLE_X11)
 	target_link_libraries(hyperiond	x11-grabber)
 endif ()
 
+if (ENABLE_XCB)
+	target_link_libraries(hyperiond	xcb-grabber)
+endif ()
+
 if (ENABLE_QT)
 	target_link_libraries(hyperiond	qt-grabber)
 endif ()
