--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,7 +68,11 @@ ELSE()
 ENDIF()
 
 if ( NOT DEFINED PLATFORM )
-	if ( "${CMAKE_SYSTEM_PROCESSOR}" MATCHES "x86" )
+	if ( APPLE )
+		SET( PLATFORM "osx")
+	elseif ( WIN32 )
+		SET( PLATFORM "windows")
+	elseif ( "${CMAKE_SYSTEM_PROCESSOR}" MATCHES "x86" )
 		SET( PLATFORM "x11")
 	elseif ( "${CMAKE_SYSTEM_PROCESSOR}" MATCHES "arm" OR "${CMAKE_SYSTEM_PROCESSOR}" MATCHES "aarch64")
 		SET( PLATFORM "rpi")
@@ -79,10 +83,6 @@ if ( NOT DEFINED PLATFORM )
 		elseif ( ("${SYSTEM_CPUINFO}" MATCHES "amlogic" OR "${SYSTEM_CPUINFO}" MATCHES "odroid-c2" OR "${SYSTEM_CPUINFO}" MATCHES "vero4k") AND ${CMAKE_SIZEOF_VOID_P} EQUAL 8 )
 			SET( PLATFORM "amlogic64" )
 		endif()
-	elseif ( APPLE )
-		SET( PLATFORM "osx")
-	elseif ( WIN32 )
-		SET( PLATFORM "windows")
 	endif()
 	if ( PLATFORM )
 		message( STATUS "PLATFORM is not defined, evaluated platform: ${PLATFORM}")
@@ -108,7 +108,7 @@ ENDMACRO()
 
 if ( "${PLATFORM}" MATCHES "osx" )
 	# add specific prefix paths
-	FIRSTSUBDIR(SUBDIRQT "/usr/local/Cellar/qt5")
+	FIRSTSUBDIR(SUBDIRQT "/usr/local/Cellar/qt")
 	FIRSTSUBDIR(SUBDIRPY "/usr/local/opt/python3/Frameworks/Python.framework/Versions")
 	SET(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} ${SUBDIRQT} ${SUBDIRPY} "/usr/local/opt/qt5" )
 	include_directories("/opt/X11/include/")
