--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -173,7 +173,7 @@ jobs:
         shell: bash
         run: |
           mkdir -p windows
-          mv build/*.zip windows
+          mv build/*.exe windows
 
       # Upload artifacts
       - name: Upload artifacts
