--- a/libsrc/grabber/directx/CMakeLists.txt
+++ b/libsrc/grabber/directx/CMakeLists.txt
@@ -2,8 +2,13 @@
 SET( CURRENT_HEADER_DIR ${CMAKE_SOURCE_DIR}/include/grabber )
 SET( CURRENT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/libsrc/grabber/directx )
 
+include_directories(${DIRECTX9_INCLUDE_DIRS})
+
 FILE ( GLOB DIRECTX_GRAB_SOURCES "${CURRENT_HEADER_DIR}/DirectX*.h"  "${CURRENT_SOURCE_DIR}/*.h"  "${CURRENT_SOURCE_DIR}/*.cpp" )
 
 add_library( directx-grabber ${DIRECTX_GRAB_SOURCES} )
 
-target_link_libraries( directx-grabber hyperion )
+target_link_libraries(directx-grabber
+    hyperion
+    ${DIRECTX9_LIBRARIES}
+)
