[Windows] Installer/Uninstaller notification when Hyperion is running. (#1033)

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -149,8 +149,10 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install NSIS
-        run: choco install --no-progress nsis -y
+      - name: Install NSIS & copy plugins
+        run: |
+          choco install --no-progress nsis -y
+          copy "cmake\nsis\template\*.dll" "C:\Program Files (x86)\NSIS\Plugins\x86-ansi\"
 
       - name: Install OpenSSL
         run: choco install --no-progress openssl -y
@@ -171,7 +173,7 @@ jobs:
         shell: bash
         run: |
           mkdir -p windows
-          mv build/*.zip windows
+          mv build/*.exe windows
 
       # Upload artifacts
       - name: Upload artifacts
