cleanup packages.cmake & extend NSIS plugin directory

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -149,13 +149,8 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install NSIS & copy plugins
-        run: |
-          choco install --no-progress nsis -y
-          copy "cmake\nsis\template\*.dll" "C:\Program Files (x86)\NSIS\Plugins\x86-ansi\"
-
-      - name: Install OpenSSL
-        run: choco install --no-progress openssl -y
+      - name: Install OpenSSL & NSIS
+        run: choco install --no-progress openssl nsis -y
 
       - name: Set up x64 build architecture environment
         shell: cmd
