--- a/cmake/nsis/template/NSIS.template.in
+++ b/cmake/nsis/template/NSIS.template.in
@@ -789,7 +789,14 @@ Section "-Core installation"
 ;    Goto End
 ;End:
 
+; Install Visual c++ Redistributable
 ExecWait '"$INSTDIR\bin\vc_redist.x64.exe" /install /quiet'
+
+; Install DirectX 9 Redistributable
+ExecWait '"$INSTDIR\bin\dx_redist.exe" /q /t:"$INSTDIR\tmp"'
+	ExecWait '"$INSTDIR\tmp\DXSETUP.exe" /silent'
+	Delete   '$INSTDIR\tmp\*.*'
+	RMDir    '$INSTDIR\tmp'
 
 SectionEnd
 
