--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@ libsrc/flatbufserver/hyperion_request_generated.h
 
 # Kdevelop project files
 *.kdev*
+
+# Visual Studio 2015/2017/2019 cache/options directory
+.vs/
+CMakeSettings.json
