--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,24 +15,24 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
 if ( POLICY CMP0026 )
-    CMAKE_POLICY( SET CMP0026 OLD )
+	CMAKE_POLICY( SET CMP0026 OLD )
 endif()
 
 # Configure CCache if available
 find_program(CCACHE_FOUND ccache)
 if ( CCACHE_FOUND )
-    set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
-    set_property(GLOBAL PROPERTY RULE_LAUNCH_LINK ccache)
+	set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
+	set_property(GLOBAL PROPERTY RULE_LAUNCH_LINK ccache)
 endif(CCACHE_FOUND)
 
 if (NOT CMAKE_VERSION VERSION_LESS "3.12")
-    find_package(Python3 COMPONENTS Interpreter Development REQUIRED)
-    if(Python_FOUND)
-        set(PYTHON_EXECUTABLE ${Python3_EXECUTABLE})
-    endif()
+	find_package(Python3 COMPONENTS Interpreter Development REQUIRED)
+	if(Python_FOUND)
+		set(PYTHON_EXECUTABLE ${Python3_EXECUTABLE})
+	endif()
 else()
-    set(Python_ADDITIONAL_VERSIONS 3.5)
-    find_package( PythonInterp 3.5 REQUIRED )
+	set(Python_ADDITIONAL_VERSIONS 3.5)
+	find_package( PythonInterp 3.5 REQUIRED )
 endif()
 
 # Set build variables
@@ -52,43 +52,43 @@ SET ( DEFAULT_TESTS                       OFF )
 SET ( DEFAULT_EXPERIMENTAL                OFF )
 
 IF ( ${CMAKE_SYSTEM} MATCHES "Linux" )
-    SET ( DEFAULT_V4L2        ON )
-    SET ( DEFAULT_SPIDEV      ON )
-    SET ( DEFAULT_TINKERFORGE ON )
-    SET ( DEFAULT_FB          ON )
-    SET ( DEFAULT_USB_HID     ON )
-    SET ( DEFAULT_CEC         ON )
+	SET ( DEFAULT_V4L2        ON )
+	SET ( DEFAULT_SPIDEV      ON )
+	SET ( DEFAULT_TINKERFORGE ON )
+	SET ( DEFAULT_FB          ON )
+	SET ( DEFAULT_USB_HID     ON )
+	SET ( DEFAULT_CEC         ON )
 ELSE()
-    SET ( DEFAULT_V4L2        OFF )
-    SET ( DEFAULT_FB          OFF )
-    SET ( DEFAULT_SPIDEV      OFF )
-    SET ( DEFAULT_TINKERFORGE OFF )
-    SET ( DEFAULT_USB_HID     OFF )
-    SET ( DEFAULT_CEC         OFF )
+	SET ( DEFAULT_V4L2        OFF )
+	SET ( DEFAULT_FB          OFF )
+	SET ( DEFAULT_SPIDEV      OFF )
+	SET ( DEFAULT_TINKERFORGE OFF )
+	SET ( DEFAULT_USB_HID     OFF )
+	SET ( DEFAULT_CEC         OFF )
 ENDIF()
 
 if ( NOT DEFINED PLATFORM )
-    if ( APPLE )
-        SET( PLATFORM "osx")
-    elseif ( WIN32 )
-        SET( PLATFORM "windows")
-    elseif ( "${CMAKE_SYSTEM_PROCESSOR}" MATCHES "x86" )
-        SET( PLATFORM "x11")
-    elseif ( "${CMAKE_SYSTEM_PROCESSOR}" MATCHES "arm" OR "${CMAKE_SYSTEM_PROCESSOR}" MATCHES "aarch64")
-        SET( PLATFORM "rpi")
-        FILE( READ /proc/cpuinfo SYSTEM_CPUINFO )
-        STRING ( TOLOWER "${SYSTEM_CPUINFO}" SYSTEM_CPUINFO )
-        if ( "${SYSTEM_CPUINFO}" MATCHES "amlogic" AND ${CMAKE_SIZEOF_VOID_P} EQUAL 4 )
-            SET( PLATFORM "amlogic" )
-        elseif ( ("${SYSTEM_CPUINFO}" MATCHES "amlogic" OR "${SYSTEM_CPUINFO}" MATCHES "odroid-c2" OR "${SYSTEM_CPUINFO}" MATCHES "vero4k") AND ${CMAKE_SIZEOF_VOID_P} EQUAL 8 )
-            SET( PLATFORM "amlogic64" )
-        endif()
-    endif()
-    if ( PLATFORM )
-        message( STATUS "PLATFORM is not defined, evaluated platform: ${PLATFORM}")
-    else()
-        message( FATAL_ERROR "PLATFORM is not defined and could not be evaluated. Set -DPLATFORM=<rpi|amlogic|amlogic64|x11|x11-dev|osx|osx-dev>")
-    endif()
+	if ( APPLE )
+		SET( PLATFORM "osx")
+	elseif ( WIN32 )
+		SET( PLATFORM "windows")
+	elseif ( "${CMAKE_SYSTEM_PROCESSOR}" MATCHES "x86" )
+		SET( PLATFORM "x11")
+	elseif ( "${CMAKE_SYSTEM_PROCESSOR}" MATCHES "arm" OR "${CMAKE_SYSTEM_PROCESSOR}" MATCHES "aarch64")
+		SET( PLATFORM "rpi")
+		FILE( READ /proc/cpuinfo SYSTEM_CPUINFO )
+		STRING ( TOLOWER "${SYSTEM_CPUINFO}" SYSTEM_CPUINFO )
+		if ( "${SYSTEM_CPUINFO}" MATCHES "amlogic" AND ${CMAKE_SIZEOF_VOID_P} EQUAL 4 )
+			SET( PLATFORM "amlogic" )
+		elseif ( ("${SYSTEM_CPUINFO}" MATCHES "amlogic" OR "${SYSTEM_CPUINFO}" MATCHES "odroid-c2" OR "${SYSTEM_CPUINFO}" MATCHES "vero4k") AND ${CMAKE_SIZEOF_VOID_P} EQUAL 8 )
+			SET( PLATFORM "amlogic64" )
+		endif()
+	endif()
+	if ( PLATFORM )
+		message( STATUS "PLATFORM is not defined, evaluated platform: ${PLATFORM}")
+	else()
+		message( FATAL_ERROR "PLATFORM is not defined and could not be evaluated. Set -DPLATFORM=<rpi|amlogic|amlogic64|x11|x11-dev|osx|osx-dev>")
+	endif()
 endif()
 
 message( STATUS "PLATFORM: ${PLATFORM}")
@@ -98,45 +98,45 @@ MACRO(FIRSTSUBDIR result curdir)
   FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
   SET(dirlist "")
   FOREACH(child ${children})
-    IF(IS_DIRECTORY ${curdir}/${child})
-      LIST(APPEND dirlist "${curdir}/${child}")
-        BREAK()
-    ENDIF()
+	IF(IS_DIRECTORY ${curdir}/${child})
+	  LIST(APPEND dirlist "${curdir}/${child}")
+		BREAK()
+	ENDIF()
   ENDFOREACH()
   SET(${result} ${dirlist})
 ENDMACRO()
 
 if ( "${PLATFORM}" MATCHES "osx" )
-    # add specific prefix paths
-    FIRSTSUBDIR(SUBDIRQT "/usr/local/Cellar/qt")
-    FIRSTSUBDIR(SUBDIRPY "/usr/local/opt/python3/Frameworks/Python.framework/Versions")
-    SET(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} ${SUBDIRQT} ${SUBDIRPY} "/usr/local/opt/Qt6" )
-    include_directories("/opt/X11/include/")
-    SET ( DEFAULT_OSX        ON )
-    SET ( DEFAULT_USB_HID    ON )
+	# add specific prefix paths
+	FIRSTSUBDIR(SUBDIRQT "/usr/local/Cellar/qt")
+	FIRSTSUBDIR(SUBDIRPY "/usr/local/opt/python3/Frameworks/Python.framework/Versions")
+	SET(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} ${SUBDIRQT} ${SUBDIRPY} "/usr/local/opt/Qt6" )
+	include_directories("/opt/X11/include/")
+	SET ( DEFAULT_OSX        ON )
+	SET ( DEFAULT_USB_HID    ON )
 elseif ( "${PLATFORM}" MATCHES "rpi" )
-    SET ( DEFAULT_DISPMANX   ON )
-    SET ( DEFAULT_WS281XPWM  ON )
+	SET ( DEFAULT_DISPMANX   ON )
+	SET ( DEFAULT_WS281XPWM  ON )
 elseif ( "${PLATFORM}" STREQUAL "amlogic" )
-    SET ( DEFAULT_AMLOGIC    ON )
+	SET ( DEFAULT_AMLOGIC    ON )
 elseif ( "${PLATFORM}" STREQUAL "amlogic64" )
-    SET ( DEFAULT_AMLOGIC    ON )
+	SET ( DEFAULT_AMLOGIC    ON )
 elseif ( "${PLATFORM}" MATCHES "x11" )
-    SET ( DEFAULT_X11        ON )
-    SET ( DEFAULT_XCB        ON )
-    if ( "${PLATFORM}" STREQUAL "x11-dev" )
-        SET ( DEFAULT_AMLOGIC    ON)
-        SET ( DEFAULT_WS281XPWM  ON )
-    endif()
+	SET ( DEFAULT_X11        ON )
+	SET ( DEFAULT_XCB        ON )
+	if ( "${PLATFORM}" STREQUAL "x11-dev" )
+		SET ( DEFAULT_AMLOGIC    ON)
+		SET ( DEFAULT_WS281XPWM  ON )
+	endif()
 elseif ( "${PLATFORM}" STREQUAL "imx6" )
-    SET ( DEFAULT_FB         ON )
+	SET ( DEFAULT_FB         ON )
 elseif (WIN32)
-    SET ( DEFAULT_AVAHI    OFF)
+	SET ( DEFAULT_AVAHI    OFF)
 endif()
 
 # enable tests for -dev builds
 if ( "${PLATFORM}" MATCHES "-dev" )
-    SET ( DEFAULT_TESTS      ON )
+	SET ( DEFAULT_TESTS      ON )
 endif()
 
 STRING( TOUPPER "-DPLATFORM_${PLATFORM}" PLATFORM_DEFINE)
@@ -151,9 +151,9 @@ option(ENABLE_DISPMANX "Enable the RPi dispmanx grabber" ${DEFAULT_DISPMANX} )
 message(STATUS "ENABLE_DISPMANX = ${ENABLE_DISPMANX}")
 
 if (ENABLE_AMLOGIC)
-    SET(ENABLE_FB ON)
+	SET(ENABLE_FB ON)
 else()
-    option(ENABLE_FB "Enable the framebuffer grabber" ${DEFAULT_FB} )
+	option(ENABLE_FB "Enable the framebuffer grabber" ${DEFAULT_FB} )
 endif()
 message(STATUS "ENABLE_FB = ${ENABLE_FB}")
 
@@ -208,39 +208,39 @@ SET ( PROTOBUF_INSTALL_LIB_DIR ${CMAKE_BINARY_DIR}/proto )
 # check all json files
 FILE ( GLOB_RECURSE HYPERION_SCHEMAS RELATIVE ${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/libsrc/*schema*.json )
 SET( JSON_FILES
-    config/hyperion.config.json.default
-    ${HYPERION_SCHEMAS}
+	config/hyperion.config.json.default
+	${HYPERION_SCHEMAS}
 )
 
 EXECUTE_PROCESS (
-    COMMAND ${PYTHON_EXECUTABLE} test/jsonchecks/checkjson.py ${JSON_FILES}
-    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-    RESULT_VARIABLE CHECK_JSON_FAILED
+	COMMAND ${PYTHON_EXECUTABLE} test/jsonchecks/checkjson.py ${JSON_FILES}
+	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+	RESULT_VARIABLE CHECK_JSON_FAILED
 )
 IF ( ${CHECK_JSON_FAILED} )
-    MESSAGE (FATAL_ERROR "check of json files failed" )
+	MESSAGE (FATAL_ERROR "check of json files failed" )
 ENDIF ()
 
 EXECUTE_PROCESS (
-    COMMAND ${PYTHON_EXECUTABLE} test/jsonchecks/checkeffects.py effects effects/schema
-    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-    RESULT_VARIABLE CHECK_EFFECTS_FAILED
+	COMMAND ${PYTHON_EXECUTABLE} test/jsonchecks/checkeffects.py effects effects/schema
+	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+	RESULT_VARIABLE CHECK_EFFECTS_FAILED
 )
 IF ( ${CHECK_EFFECTS_FAILED} )
-    MESSAGE (FATAL_ERROR "check of json effect files failed" )
+	MESSAGE (FATAL_ERROR "check of json effect files failed" )
 ENDIF ()
 
 # for python 3 the checkschema.py file must be rewritten
 # TODO on windows it can't resolve the path inside the file (Das System kann den angegebenen Pfad nicht finden: '\\schema\\schema-general.json')
 IF (NOT WIN32)
-    EXECUTE_PROCESS (
-        COMMAND python test/jsonchecks/checkschema.py config/hyperion.config.json.default libsrc/hyperion/hyperion.schema.json
-        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-        RESULT_VARIABLE CHECK_CONFIG_FAILED
-    )
+	EXECUTE_PROCESS (
+		COMMAND python test/jsonchecks/checkschema.py config/hyperion.config.json.default libsrc/hyperion/hyperion.schema.json
+		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+		RESULT_VARIABLE CHECK_CONFIG_FAILED
+	)
 ENDIF()
 IF ( ${CHECK_CONFIG_FAILED} )
-    MESSAGE (FATAL_ERROR "check of json default config failed" )
+	MESSAGE (FATAL_ERROR "check of json default config failed" )
 ENDIF ()
 
 # Add project specific cmake modules (find, etc)
@@ -269,22 +269,22 @@ include_directories(${CMAKE_SOURCE_DIR}/include)
 
 # enable C++11; MSVC doesn't have c++11 feature switch
 if(NOT CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
-    include(CheckCXXCompilerFlag)
-    CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
-    CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
+	include(CheckCXXCompilerFlag)
+	CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
+	CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
 
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
-    if (CMAKE_COMPILER_IS_GNUCXX)
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-psabi")
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-psabi")
-    endif()
-    if(COMPILER_SUPPORTS_CXX11)
-            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-    elseif(COMPILER_SUPPORTS_CXX0X)
-            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
-    else()
-            message(STATUS "No support for C++11 detected. Compilation will most likely fail on your compiler")
-    endif()
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
+	if (CMAKE_COMPILER_IS_GNUCXX)
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-psabi")
+		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-psabi")
+	endif()
+	if(COMPILER_SUPPORTS_CXX11)
+			set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+	elseif(COMPILER_SUPPORTS_CXX0X)
+			set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+	else()
+			message(STATUS "No support for C++11 detected. Compilation will most likely fail on your compiler")
+	endif()
 endif()
 
 # MSVC options
@@ -334,46 +334,46 @@ endif()
 
 # Use GNU gold linker if available
 if (NOT WIN32)
-    include (${CMAKE_CURRENT_SOURCE_DIR}/cmake/LDGold.cmake)
+	include (${CMAKE_CURRENT_SOURCE_DIR}/cmake/LDGold.cmake)
 endif()
 
 # Don't create new dynamic tags (RUNPATH)
 if (NOT CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--disable-new-dtags")
+	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--disable-new-dtags")
 endif()
 
 # setup -rpath to search for shared libs in BINARY/../lib folder
 if (UNIX AND NOT APPLE)
-    SET(CMAKE_SKIP_BUILD_RPATH FALSE)
-    SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
-    SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_RPATH}:$ORIGIN/../lib")
-    SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+	SET(CMAKE_SKIP_BUILD_RPATH FALSE)
+	SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
+	SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_RPATH}:$ORIGIN/../lib")
+	SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 endif ()
 
 # add Qt6 dependency
 IF ( CMAKE_CROSSCOMPILING )
 
-    file(GLOB QT_BIN ${QT_BIN_PATH})
+	file(GLOB QT_BIN ${QT_BIN_PATH})
 
-    set(QT_MOC_EXECUTABLE ${QT_BIN}/moc)
-    add_executable(Qt6::moc IMPORTED)
-    set_property(TARGET Qt6::moc PROPERTY IMPORTED_LOCATION ${QT_MOC_EXECUTABLE})
+	set(QT_MOC_EXECUTABLE ${QT_BIN}/moc)
+	add_executable(Qt6::moc IMPORTED)
+	set_property(TARGET Qt6::moc PROPERTY IMPORTED_LOCATION ${QT_MOC_EXECUTABLE})
 
-    set(QT_RCC_EXECUTABLE ${QT_BIN}/rcc)
-    add_executable(Qt6::rcc IMPORTED)
-    set_property(TARGET Qt6::rcc PROPERTY IMPORTED_LOCATION ${QT_RCC_EXECUTABLE})
+	set(QT_RCC_EXECUTABLE ${QT_BIN}/rcc)
+	add_executable(Qt6::rcc IMPORTED)
+	set_property(TARGET Qt6::rcc PROPERTY IMPORTED_LOCATION ${QT_RCC_EXECUTABLE})
 
-    message(STATUS "QT_BIN_PATH = ${QT_BIN}")
-    message(STATUS "QT_MOC_EXECUTABLE = ${QT_MOC_EXECUTABLE}")
-    message(STATUS "QT_RCC_EXECUTABLE = ${QT_RCC_EXECUTABLE}")
+	message(STATUS "QT_BIN_PATH = ${QT_BIN}")
+	message(STATUS "QT_MOC_EXECUTABLE = ${QT_MOC_EXECUTABLE}")
+	message(STATUS "QT_RCC_EXECUTABLE = ${QT_RCC_EXECUTABLE}")
 
 ENDIF()
 
 SET(QT_MIN_VERSION "5.5.0")
-find_package(Qt6 COMPONENTS Core Gui Network SerialPort Sql REQUIRED)
+find_package(Qt6 COMPONENTS Core Gui Network Sql SerialPort REQUIRED)
 message( STATUS "Found Qt Version: ${Qt6Core_VERSION}" )
 IF ( "${Qt6Core_VERSION}" VERSION_LESS "${QT_MIN_VERSION}" )
-    message( FATAL_ERROR "Your Qt version is to old! Minimum required ${QT_MIN_VERSION}" )
+	message( FATAL_ERROR "Your Qt version is to old! Minimum required ${QT_MIN_VERSION}" )
 ENDIF()
 
 # Add libusb and pthreads
@@ -383,31 +383,31 @@ add_definitions(${QT_DEFINITIONS})
 
 # Add JPEG library
 if (ENABLE_V4L2)
-    # Turbo JPEG
-    find_package(TurboJPEG)
-    if (TURBOJPEG_FOUND)
-        add_definitions(-DHAVE_TURBO_JPEG)
-        message( STATUS "Using Turbo JPEG library: ${TurboJPEG_LIBRARY}")
-        include_directories(${TurboJPEG_INCLUDE_DIRS})
-    else()
-        # System JPEG
-        find_package(JPEG)
-        if (JPEG_FOUND)
-            add_definitions(-DHAVE_JPEG)
-            message( STATUS "Using system JPEG library: ${JPEG_LIBRARIES}")
-            include_directories(${JPEG_INCLUDE_DIR})
-        else()
-            message( STATUS "JPEG library not found, MJPEG camera format won't work in V4L2 grabber.")
-        endif()
-    endif (TURBOJPEG_FOUND)
+	# Turbo JPEG
+	find_package(TurboJPEG)
+	if (TURBOJPEG_FOUND)
+		add_definitions(-DHAVE_TURBO_JPEG)
+		message( STATUS "Using Turbo JPEG library: ${TurboJPEG_LIBRARY}")
+		include_directories(${TurboJPEG_INCLUDE_DIRS})
+	else()
+		# System JPEG
+		find_package(JPEG)
+		if (JPEG_FOUND)
+			add_definitions(-DHAVE_JPEG)
+			message( STATUS "Using system JPEG library: ${JPEG_LIBRARIES}")
+			include_directories(${JPEG_INCLUDE_DIR})
+		else()
+			message( STATUS "JPEG library not found, MJPEG camera format won't work in V4L2 grabber.")
+		endif()
+	endif (TURBOJPEG_FOUND)
 
-    if (TURBOJPEG_FOUND OR JPEG_FOUND)
-        add_definitions(-DHAVE_JPEG_DECODER)
-    endif()
+	if (TURBOJPEG_FOUND OR JPEG_FOUND)
+		add_definitions(-DHAVE_JPEG_DECODER)
+	endif()
 endif()
 
 if(APPLE)
-    set(CMAKE_EXE_LINKER_FLAGS "-framework CoreGraphics")
+	set(CMAKE_EXE_LINKER_FLAGS "-framework CoreGraphics")
 endif()
 
 # Add the source/lib directories
@@ -415,7 +415,7 @@ add_subdirectory(dependencies)
 add_subdirectory(libsrc)
 add_subdirectory(src)
 if (ENABLE_TESTS)
-    add_subdirectory(test)
+	add_subdirectory(test)
 endif ()
 
 # Add resources directory
@@ -423,9 +423,9 @@ add_subdirectory(resources)
 
 # remove generated files on make cleaan too
 LIST( APPEND GENERATED_QRC
-    ${CMAKE_BINARY_DIR}/EffectEngine.qrc
-    ${CMAKE_BINARY_DIR}/WebConfig.qrc
-    ${CMAKE_BINARY_DIR}/HyperionConfig.h
+	${CMAKE_BINARY_DIR}/EffectEngine.qrc
+	${CMAKE_BINARY_DIR}/WebConfig.qrc
+	${CMAKE_BINARY_DIR}/HyperionConfig.h
 )
 set_directory_properties(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES "${GENERATED_QRC}" )
 
