--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "name": "(Linux) hyperiond",
       "type": "cppdbg",
       "request": "launch",
-      "program": "${workspaceFolder}/build/bin/hyperiond",
+      "program": "${command:cmake.launchTargetDirectory}/hyperiond",
       "args": ["-d"],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
@@ -27,7 +27,7 @@
       "name": "(Windows) hyperiond",
       "type": "cppvsdbg",
       "request": "launch",
-      "program": "${workspaceFolder}/build/bin/Debug/hyperiond.exe",
+      "program": "${command:cmake.launchTargetDirectory}/hyperiond",
       "args": ["-d"],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
